basics of practice app finished

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drag and drop</title>
-    <style></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
+    <h1>Lorem ipsum dolor sit.</h1>
+    <p>Drag and drop me</p>
+    <ul class="draggable-list" id="draggable-list"></ul> 
+    <button class="check-btn" id="check">
+    Check Order
+    <i class="fas fa-paper-plane"></i>
+    </button>
     
     <footer>
-        <script>
-
-        </script>
+        <script src="./js.js"></script>
     </footer>
 </body>
     
